Closed Bug 467073 Opened 16 years ago Closed 16 years ago

Focus handling patch for incubator/embedding

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tobias.hunger, Unassigned)

References

Details

Attachments

(1 file, 2 obsolete files)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/2008111616 Ubuntu/9.04 (jaunty) Firefox/3.0.4
Build Identifier: incubator/embedding hg repository rev. dabab67820e6

This patch enables focus change notification in the common part of the new embedding API. This patch is required to enable integrated focus handling in a real-world browser build on top of the new embedding API.

This patch may depend on the patches found in reports #467071 and #467072.

It was tested with the Qt flavor of the new embedding APIs only.

Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Attached patch The actual patch (obsolete) — Splinter Review
Attached patch The actual patch (not gzip'ed) (obsolete) — Splinter Review
Comment on attachment 350457 [details] [diff] [review]
The actual patch (not gzip'ed)

>diff -urN 002/common/embed.cpp 003/common/embed.cpp
>
>--- 002/common/embed.cpp	2008-11-25 10:39:13.000000000 +0100
>+++ 003/common/embed.cpp	2008-11-25 11:06:57.000000000 +0100
>
>@@ -607,3 +607,8 @@
>
>   MOZ_UNUSED(aResult);
>
> }
>
> 
>
>+void MozViewListener::FocusSibling(PRBool aNext)
>
>+{
>
>+  MOZ_UNUSED(aNext);
>
>+}
>
>+
>
>diff -urN 002/common/embed.h 003/common/embed.h
>
>--- 002/common/embed.h	2008-11-25 10:39:13.000000000 +0100
>
>+++ 003/common/embed.h	2008-11-25 11:06:28.000000000 +0100
>
>@@ -484,6 +484,14 @@
>
>      */
>
>     virtual void ExitModal(nsresult result);
>
> 
>
>+  /**
>
>+   * The focus is about to leave the browser window.

No it isn't. Focus is moving to another element _inside_ the browser

>+   *
>+   * @param    aNext if PR_TRUE, the next sibling shall be focused (Tab), otherwise the

Change from aNext to aForward

>+   *                 previous sibling is to be focused (Shift-Tab)
>+   */
>+  virtual void FocusSibling( PRBool aNext );

    virtual void OnFocusChange(PRBool aForward);

We are planing to cleanup the names of all events. Might as well start right with this one.


>+++ 003/common/WebBrowserChrome.h	2008-11-25 11:05:00.000000000 +0100

>     MozView* pMozView;
>     PRBool mIsModal;
>+
> };

Don't add a blank line

>
>-#endif // Header guard
>+#endif /* __WebBrowserChrome_h_ */

No need for this change


NOTE: 4 space indent on all CPP/H/IDL files please.
      Space between if and (

Looks good. Clean this up and we can land it
Attachment #350457 - Flags: review-
Incorporate feedback from reviewers.
Attachment #350451 - Attachment is obsolete: true
Attachment #350457 - Attachment is obsolete: true
http://hg.mozilla.org/incubator/embedding/rev/543d5566a209
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Blocks: 467076
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: