Bug 467073: Focus handling patch, r=mfinkle