common/WebBrowserChrome.h
@@ -4,6 +4,7 @@
 #include "nsCOMPtr.h"
 #include "nsIWebBrowser.h"
 #include "nsIWebBrowserChrome.h"
+#include "nsIWebBrowserChromeFocus.h"
 #include "nsIWebProgressListener.h"
 #include "nsIEmbeddingSiteWindow.h"
 #include "nsIInterfaceRequestor.h"
@@ -13,6 +14,7 @@ class MozView;
 
 class WebBrowserChrome : public nsIWebBrowserChrome,
     public nsIWebProgressListener,
+    public nsIWebBrowserChromeFocus,
     public nsIEmbeddingSiteWindow,
     public nsIInterfaceRequestor,
     public nsSupportsWeakReference
@@ -21,6 +23,7 @@ public:
     NS_DECL_ISUPPORTS
     NS_DECL_NSIWEBBROWSERCHROME
     NS_DECL_NSIWEBPROGRESSLISTENER
+    NS_DECL_NSIWEBBROWSERCHROMEFOCUS
     NS_DECL_NSIEMBEDDINGSITEWINDOW
     NS_DECL_NSIINTERFACEREQUESTOR
 
